--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@uiball/loaders": "^1.2.6",
     "aos": "^2.3.4",
     "framer-motion": "^8.1.9",
+    "gsap": "^3.11.4",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
